<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ActivityAboutMe">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay">
        <include layout="@layout/toolbar"
                 android:layout_width="match_parent" android:layout_height="match_parent"/>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ActivityAboutMe"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:orientation="vertical">

        <TextView
                android:text="@string/bmi_about_me_first_text"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/firstPriorityText"
                android:layout_weight="5" android:textSize="70sp" android:textAlignment="center"
                android:background="@color/colorPrimaryDark" android:textColor="@color/textColor"/>
        <TextView
                android:text="@string/bmi_about_me_second_text"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/secondPriorityText"
                android:layout_weight="3" android:textSize="40sp" android:textAlignment="center"
                android:background="@color/colorPrimary" android:textColor="@color/textColor"/>
        <TextView
                android:text="@string/bmi_about_me_third_text"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/thirdPriorityText"
                android:layout_weight="2" android:textSize="30sp" android:textAlignment="center"
                android:background="@color/colorPrimaryLight" android:textColor="@color/textColor"/>
        <TextView
                android:text="@string/bmi_about_me_fourth_text"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fourthPriorityText"
                android:layout_weight="1" android:textSize="20sp" android:textAlignment="center"
                android:background="@color/colorPrimaryUltraLight" android:textColor="@color/textColor"/>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>